fix(bottom-sheet): fixed footer overlaps

--- a/packages/bottom-sheet/src/components/footer/index.module.css
+++ b/packages/bottom-sheet/src/components/footer/index.module.css
@@ -13,6 +13,7 @@
 .sticky {
     position: sticky;
     bottom: 0;
+    z-index: 1;
 }
 
 .highlighted {
